[gd_scene load_steps=21 format=3 uid="uid://b7rpu2eiydidn"]

[ext_resource type="Script" uid="uid://wmyj7sf2qfhu" path="res://speedReader/SpeedReader.gd" id="1_iq8i0"]
[ext_resource type="Theme" uid="uid://bgoh6vqpusiqe" path="res://themes/dark/base_player_theme_dark.tres" id="2_3dwvd"]
[ext_resource type="FontFile" uid="uid://c55x50yepnavk" path="res://fonts/Poppins/Poppins-Light.ttf" id="2_v4uy4"]
[ext_resource type="Script" uid="uid://cdmdowrdnm7vn" path="res://speedReader/TextContainer.gd" id="2_xdc5n"]
[ext_resource type="Script" uid="uid://b3uukynvdg636" path="res://speedReader/FullText.gd" id="3_f3hev"]
[ext_resource type="Script" uid="uid://ckutroofw2701" path="res://dialog/InputDialog.gd" id="5_q068l"]
[ext_resource type="Script" uid="uid://nnsywkaaa6jg" path="res://speedReader/Player.gd" id="6_3dwvd"]
[ext_resource type="Texture2D" uid="uid://vdmm4fxsfxv7" path="res://assets/dark theme/white_skip_back_button.png" id="6_jaaaw"]
[ext_resource type="Texture2D" uid="uid://nr8subgtvvwi" path="res://assets/dark theme/white_skip_forward_button.png" id="8_3dwvd"]
[ext_resource type="Texture2D" uid="uid://qblsa1w723aq" path="res://assets/dark theme/white_play_button.png" id="8_dj55r"]
[ext_resource type="FontFile" uid="uid://dejoefeh8m8sh" path="res://fonts/roboto/Roboto-Regular.ttf" id="9_dj55r"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_iq8i0"]
color = Color(0.18, 0.18, 0.18, 1)
thickness = 3
vertical = true

[sub_resource type="DPITexture" id="DPITexture_x4dh1"]

[sub_resource type="DPITexture" id="DPITexture_3dwvd"]

[sub_resource type="DPITexture" id="DPITexture_dj55r"]

[sub_resource type="DPITexture" id="DPITexture_t3wsn"]

[sub_resource type="DPITexture" id="DPITexture_0bh3t"]

[sub_resource type="DPITexture" id="DPITexture_psif1"]

[sub_resource type="DPITexture" id="DPITexture_w152y"]

[sub_resource type="DPITexture" id="DPITexture_n12ab"]

[node name="SpeedReader" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iq8i0")

[node name="ColorBackground" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="UpVSeparator" type="VSeparator" parent="."]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/separator = SubResource("StyleBoxLine_iq8i0")

[node name="DownSeparator" type="VSeparator" parent="."]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/separator = SubResource("StyleBoxLine_iq8i0")

[node name="Timer" type="Timer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Player" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource("2_3dwvd")
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40
script = ExtResource("6_3dwvd")

[node name="FlowContainer" type="FlowContainer" parent="HBoxContainer/Player"]
layout_mode = 2
theme_override_constants/v_separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Player/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Backwards" type="Button" parent="HBoxContainer/Player/FlowContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("6_jaaaw")
icon_alignment = 1
expand_icon = true

[node name="Play" type="Button" parent="HBoxContainer/Player/FlowContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("8_dj55r")
icon_alignment = 1
expand_icon = true

[node name="Forwards" type="Button" parent="HBoxContainer/Player/FlowContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("8_3dwvd")
icon_alignment = 1
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/Player/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="WordsPerMinute" type="VBoxContainer" parent="HBoxContainer/Player/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="WPMText" type="RichTextLabel" parent="HBoxContainer/Player/FlowContainer/WordsPerMinute"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("9_dj55r")
theme_override_font_sizes/normal_font_size = 20
text = " Palavras Por Minuto (PPM): "
fit_content = true
scroll_active = false

[node name="WPMSpinBox" type="SpinBox" parent="HBoxContainer/Player/FlowContainer/WordsPerMinute"]
layout_mode = 2
min_value = 1.0
max_value = 10000.0
value = 1.0
alignment = 1
suffix = "PPM"

[node name="WPMHSlider" type="HSlider" parent="HBoxContainer/Player/FlowContainer/WordsPerMinute"]
layout_mode = 2
focus_mode = 0
tick_count = 5
ticks_on_borders = true
ticks_position = 3

[node name="TextContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_xdc5n")

[node name="FileDialog" type="FileDialog" parent="HBoxContainer/TextContainer"]
oversampling_override = 1.0
ok_button_text = "Salvar"
cancel_button_text = "Cancelar"
access = 2
use_native_dialog = true

[node name="AcceptDialog" type="AcceptDialog" parent="HBoxContainer/TextContainer"]
title = "Aviso!"
force_native = true

[node name="InputDialog" type="AcceptDialog" parent="HBoxContainer/TextContainer"]
script = ExtResource("5_q068l")
metadata/_custom_type_script = "uid://ckutroofw2701"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextContainer"]
layout_mode = 2

[node name="Top" type="MarginContainer" parent="HBoxContainer/TextContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="FlowContainer" type="FlowContainer" parent="HBoxContainer/TextContainer/VBoxContainer/Top"]
layout_mode = 2
alignment = 2

[node name="File" type="MenuButton" parent="HBoxContainer/TextContainer/VBoxContainer/Top/FlowContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Arquivo"
flat = false
item_count = 3
popup/item_0/text = "Abrir"
popup/item_0/id = 0
popup/item_1/text = "Importar"
popup/item_1/id = 1
popup/item_2/text = "Abrir local do arquivo"
popup/item_2/id = 2

[node name="ReturnButton" type="Button" parent="HBoxContainer/TextContainer/VBoxContainer/Top/FlowContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Voltar"

[node name="Settings" type="Button" parent="HBoxContainer/TextContainer/VBoxContainer/Top/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Configurações"

[node name="KeepDisplaying" type="CheckButton" parent="HBoxContainer/TextContainer/VBoxContainer/Top/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Continua mostrando a HUD enquanto a leitura estiver ocorrendo."
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Continuar mostrando HUD"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/TextContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/TextContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FullText" type="RichTextLabel" parent="HBoxContainer/TextContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_v4uy4")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 2
script = ExtResource("3_f3hev")

[node name="WordButton" type="Button" parent="HBoxContainer/TextContainer/VBoxContainer/MarginContainer/VBoxContainer/FullText"]
show_behind_parent = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/TextContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Bottom" type="MarginContainer" parent="HBoxContainer/TextContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="FlowContainer" type="FlowContainer" parent="HBoxContainer/TextContainer/VBoxContainer/Bottom"]
layout_mode = 2
theme_override_constants/h_separation = 10
last_wrap_alignment = 3

[node name="LeftPage" type="Button" parent="HBoxContainer/TextContainer/VBoxContainer/Bottom/FlowContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 10
mouse_default_cursor_shape = 2
disabled = true
text = "<"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TextContainer/VBoxContainer/Bottom/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PageSpinBox" type="SpinBox" parent="HBoxContainer/TextContainer/VBoxContainer/Bottom/FlowContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/buttons_width = 0
theme_override_icons/up = SubResource("DPITexture_x4dh1")
theme_override_icons/up_hover = SubResource("DPITexture_3dwvd")
theme_override_icons/up_pressed = SubResource("DPITexture_dj55r")
theme_override_icons/up_disabled = SubResource("DPITexture_t3wsn")
theme_override_icons/down = SubResource("DPITexture_0bh3t")
theme_override_icons/down_hover = SubResource("DPITexture_psif1")
theme_override_icons/down_pressed = SubResource("DPITexture_w152y")
theme_override_icons/down_disabled = SubResource("DPITexture_n12ab")
min_value = 1.0
max_value = 1.0
value = 1.0
alignment = 2

[node name="PagesText" type="RichTextLabel" parent="HBoxContainer/TextContainer/VBoxContainer/Bottom/FlowContainer/HBoxContainer"]
layout_mode = 2
text = "/1"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPage" type="Button" parent="HBoxContainer/TextContainer/VBoxContainer/Bottom/FlowContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
disabled = true
text = ">"

[connection signal="pressed" from="HBoxContainer/Player/FlowContainer/HBoxContainer/Backwards" to="HBoxContainer/Player" method="_on_backwards_pressed"]
[connection signal="pressed" from="HBoxContainer/Player/FlowContainer/HBoxContainer/Play" to="HBoxContainer/Player" method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/Player/FlowContainer/HBoxContainer/Forwards" to="HBoxContainer/Player" method="_on_forwards_pressed"]
[connection signal="value_changed" from="HBoxContainer/Player/FlowContainer/WordsPerMinute/WPMSpinBox" to="HBoxContainer/Player" method="_on_wpm_spin_box_value_changed"]
[connection signal="drag_ended" from="HBoxContainer/Player/FlowContainer/WordsPerMinute/WPMHSlider" to="HBoxContainer/Player" method="_on_wpm_hslider_drag_ended"]
[connection signal="value_changed" from="HBoxContainer/Player/FlowContainer/WordsPerMinute/WPMHSlider" to="HBoxContainer/Player" method="_on_wpm_hslider_value_changed"]
[connection signal="file_selected" from="HBoxContainer/TextContainer/FileDialog" to="HBoxContainer/TextContainer" method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="HBoxContainer/TextContainer/VBoxContainer/Top/FlowContainer/ReturnButton" to="HBoxContainer/TextContainer" method="_on_return_button_pressed"]
[connection signal="pressed" from="HBoxContainer/TextContainer/VBoxContainer/Top/FlowContainer/Settings" to="HBoxContainer/TextContainer" method="_on_settings_pressed"]
[connection signal="toggled" from="HBoxContainer/TextContainer/VBoxContainer/Top/FlowContainer/KeepDisplaying" to="HBoxContainer/TextContainer" method="_on_keep_displaying_toggled"]
[connection signal="pressed" from="HBoxContainer/TextContainer/VBoxContainer/MarginContainer/VBoxContainer/FullText/WordButton" to="HBoxContainer/TextContainer/VBoxContainer/MarginContainer/VBoxContainer/FullText" method="_on_word_button_pressed"]
[connection signal="pressed" from="HBoxContainer/TextContainer/VBoxContainer/Bottom/FlowContainer/LeftPage" to="HBoxContainer/TextContainer/VBoxContainer/MarginContainer/VBoxContainer/FullText" method="_on_left_page_pressed"]
[connection signal="value_changed" from="HBoxContainer/TextContainer/VBoxContainer/Bottom/FlowContainer/HBoxContainer/PageSpinBox" to="HBoxContainer/TextContainer/VBoxContainer/MarginContainer/VBoxContainer/FullText" method="_on_page_spin_box_value_changed"]
[connection signal="pressed" from="HBoxContainer/TextContainer/VBoxContainer/Bottom/FlowContainer/RightPage" to="HBoxContainer/TextContainer/VBoxContainer/MarginContainer/VBoxContainer/FullText" method="_on_right_page_pressed"]
